--- a/src/index.scss
+++ b/src/index.scss
@@ -76,9 +76,12 @@ html, body {
 .flex-row {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  margin: 4px 0px;
 }
 
 .flex-column {
   display: flex;
   flex-direction: column;
+  flex: 1 0 auto;
 }
